Add reset game functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>弾幕シューティング</h1>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <button id="resetButton" style="display: none;">もう一度プレイ</button>
     <script src="script.js"></script>
 </body>
 </html>
